# SMASH

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  data.tar
Input/: Input-P.txt  readme.md
Output/: Output.txt
Results/: bert_nonlinear_semi.txt  online_10k.txt  online_10k_1server.txt  online_10k_2server.txt  qwen_nonlinear_semi.txt  semi_online_10k_1server.txt  semi_online_10k_2server.txt  test_A2B_mascot_results.txt  test_A2B_spdz2k_results.txt  test_A2L_mascot_results.txt  test_A2L_spdz2k_results.txt  test_B2A_mascot_results.txt  test_B2A_spdz2k_results.txt  test_L2A_mascot_results.txt  test_L2A_spdz2k_results.txt  total_10k_1server.txt  total_1server.txt  total_1server_8.txt  total_2server.txt
Results copy/: bert_nonlinear_malicious.txt  online_10k_1server.txt  qwen_nonlinear_malicious.txt  semi_online_10k_1server.txt  test_A2B_mascot_results.txt  test_A2B_spdz2k_results.txt  test_A2L_spdz2k_results.txt  test_B2A_mascot_results.txt  test_B2A_spdz2k_results.txt  test_L2A_mascot_results.txt  test_L2A_spdz2k_results.txt  total_1server_10.txt  total_1server_12.txt
Results copy/error_logs/: test_lvt_n16_wan_party1_20251216_012203.err  test_lvt_n2_local_party1_20251215_224108.err
Results/error_logs/: test_lvt_n16_lan_party1_20251216_012111.err  test_lvt_n16_local_party1_20251216_012019.err  test_lvt_n2_lan_party1_20251215_224209.err
Test_scripts/: bert_nonlinear_malicious.sh  bert_nonlinear_semi.sh  online_10k.sh  online_10k_1server.sh  online_10k_2server.sh  qwen_nonlinear_malicious.sh  qwen_nonlinear_semi.sh  semi_online_10k_1server.sh  semi_online_10k_2server.sh  share_conversion.sh  total_1server.sh  total_2server.sh
bert_lookup_project/: config.py  error_analyzer.py  gelu_tables.npy  lookup_table_system.py  main.py  mse.py  nonlinear_functions.py  run_examples.py  sigmoid_tables.npy  table_generator.py  tanh_tables.npy
config/: parties8.txt
emp-aby/: BSGS.hpp  P2M.hpp  elgl_interface.hpp  lvt.h  lvt_semi_honest copy 1.h  lvt_semi_honest copy 2.h  lvt_semi_honest.h  mascot.hpp  spdz2k.hpp  tiny.hpp
emp-aby/io/: mp_io_channel.h  multi-io.hpp
lib/: libmcl.so.1.74  libmclbn256.so.1.74  libmclbn384.so.1.74  libmclbn384_256.so.1.74
libelgl/elgl/: Ciphertext.h  ELGL_Key.h  FFT.h  Plaintext.cpp
libelgl/elgloffline/: Commit_proof.cpp  Commit_proof.h  Commit_prover.cpp  Commit_prover.h  Commit_verifier.cpp  Exp_proof.cpp  Exp_prover.cpp  Exp_prover.h  Exp_verifier.cpp  Exp_verifier.h  Range_Prover.cpp  Range_Prover.h  Range_Verifier.cpp  Range_Verifier.h  RotationProof.h  RotationProver.cpp  RotationVerifier.cpp  Schnorr_Prover.cpp
test/: lut.cpp
testLLM/: 515test.cpp  517test.cpp  secret_tensor.cpp
testLYL/: A2B_mascot.cpp  A2B_mascot.hpp  A2B_spdz2k.cpp  A2B_spdz2k.hpp  A2L_mascot.cpp  A2L_mascot.hpp  A2L_spdz2k.cpp  A2L_spdz2k.hpp  B2A_mascot.cpp  B2A_mascot.hpp  B2A_spdz2k.cpp  B2A_spdz2k.hpp  B2L.cpp  B2L.hpp  BSGS.cpp  CMakeLists.txt  L2A_mascot.cpp  L2A_mascot.hpp  L2A_spdz2k.cpp  L2A_spdz2k.hpp  L2B.cpp  L2B.hpp  P2M.cpp  README_network_tests.md  README_storage_analysis.md  auto_test_screen.sh  gen_File.cpp  gen_table2.cpp  lvt.cpp  lvt2.cpp  lvt_load.cpp  lvt_online.cpp  lvt_semi.cpp  mascot.cpp  network_test_config.py  run_lvt_semi_experiments.sh  run_network_tests.sh  simple_storage_analysis.cpp  simple_storage_results.csv  simple_storage_test.sh  (+6 more)
testLYL/A2B_mascot_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2B_mascot_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2B_spdz2k_2/: lan_results.txt  local_results.txt
testLYL/A2B_spdz2k_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_mascot_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_mascot_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_mascot_8/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_spdz2k_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_spdz2k_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/A2L_spdz2k_8/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/B2A_mascot_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/B2A_mascot_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/B2A_spdz2k_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/B2A_spdz2k_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/network_configs/: wan_network.txt
testLYL/network_configs_16/: local_network.txt
testLYL/network_configs_2/: lan_network.txt
testLYL/network_configs_32/: local_network.txt
testLYL/network_configs_4/: local_network.txt
testLYL/network_configs_64/: local_network.txt
testLYL/network_configs_8/: local_network.txt
testLYL/test_results/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/test_results_16/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/test_results_2/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/test_results_32/: local_results.txt
testLYL/test_results_4/: lan_results.txt  local_results.txt  wan_results.txt
testLYL/test_results_8/: lan_results.txt  local_results.txt  wan_results.txt
testProof/: ELGL_FFT-example.cpp  FFT_Paral.cpp  Rotate_proof-example.cpp  elgl.cpp
